pkg/synthesis/tests_expected_output/k8s_resources/ExampleDenyPassSimple_true_0/pods.yaml
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__Slytherin: "true"
    name: Slytherin
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__Hufflepuff: "true"
    name: Hufflepuff
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__Gryffindor: "true"
    name: Gryffindor
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__Dumbledore: "true"
        group__Dumbledore1: "true"
    name: Dumbledore1
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__Dumbledore: "true"
        group__Dumbledore2: "true"
    name: Dumbledore2
spec:
    containers: null
status: {}
