pkg/synthesis/tests_expected_output/k8s_resources/ExampleDenyPassSimple_true_0/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (*) to (group != Hufflepuff and group != Slytherin)
        nsx-id: "10230"
    creationTimestamp: null
    name: policy_0
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Hufflepuff
                      operator: DoesNotExist
                    - key: group__Slytherin
                      operator: DoesNotExist
    podSelector: {}
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (*) to (group = Dumbledore)
        nsx-id: "10230"
    creationTimestamp: null
    name: policy_1
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Dumbledore
                      operator: Exists
    podSelector: {}
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (*) to (group != Hufflepuff and group != Slytherin)
        nsx-id: "10230"
    creationTimestamp: null
    name: policy_2
spec:
    ingress:
        - from:
            - podSelector: {}
    podSelector:
        matchExpressions:
            - key: group__Hufflepuff
              operator: DoesNotExist
            - key: group__Slytherin
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (*) to (group = Dumbledore)
        nsx-id: "10230"
    creationTimestamp: null
    name: policy_3
spec:
    ingress:
        - from:
            - podSelector: {}
    podSelector:
        matchExpressions:
            - key: group__Dumbledore
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: noNsxID
    creationTimestamp: null
    name: defaultDeny
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
